(GameInfoField) btn bug fixed

--- a/src/Shared/ImagePreview/ImagePreview.module.css
+++ b/src/Shared/ImagePreview/ImagePreview.module.css
@@ -16,14 +16,13 @@
     animation-iteration-count: 1;
     transform-origin: top center;
     --height: 0px;
-    max-height: calc(100vh - 152px);
 }
 .hide {
     animation-name: height-disappear;
 }
 
 .img {
-    height: var(--height);
+    height: calc(var(--height) - 32px);
 }
 @keyframes height-appear {
     0% {
