--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/ButtonForGameInfoFieldSection/ButtonForGameInfoFieldSection.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/ButtonForGameInfoFieldSection/ButtonForGameInfoFieldSection.module.css
@@ -23,8 +23,6 @@
 @media screen and (max-width: 768px) {
     .btn {
         font-size: 12px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        white-space: wrap;
     }
 }
