--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDescription/IndiGameTextDescription/IndiGameTextDescription.module.css
@@ -1,97 +1,102 @@
 .individualGameDetailDescriptionContainer {
-  overflow: hidden;
+    overflow: hidden;
 }
 .showTransition {
-  transition: height 300ms;
+    transition: height 300ms;
 }
 
 .individualGameDetailDescription {
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0.2px;
-  margin-top: 30px;
-  margin-bottom: 20px;
+    font-size: 1rem;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 .descriptionContainer {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 .mainHeader {
-  font-size: inherit;
-  font-weight: normal;
-  margin-bottom: 20px;
+    font-size: inherit;
+    font-weight: normal;
+    margin-bottom: 20px;
 }
 
 .subHeader {
-  font-size: inherit;
-  font-weight: normal;
-  color: rgba(255, 255, 255, 0.6);
-  margin-bottom: 20px;
+    font-size: inherit;
+    font-weight: normal;
+    color: rgba(255, 255, 255, 0.6);
+    margin-bottom: 20px;
 }
 
 .description {
-  font-size: inherit;
-  display: inline-block;
-
-  color: rgba(255, 255, 255, 0.6);
+    font-size: inherit;
+    display: inline-block;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .showHideButtonContainer {
-  position: relative;
-  width: 100%;
-  height: 50px;
+    position: relative;
+    width: 100%;
+    height: 50px;
 }
 
 .showHideButton {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-transform: uppercase;
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-  border: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  color: white;
-  z-index: 1;
-  cursor: pointer;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: white;
+    cursor: pointer;
 }
 
 .rotateArrowContainer {
-  width: 1rem;
-  height: 100%;
-  margin-left: 5px;
-  position: relative;
+    width: 1rem;
+    height: 100%;
+    margin-left: 5px;
+    position: relative;
 }
 
 .rotateArrow {
-  width: 100%;
-  height: 1rem;
-  position: absolute;
-  scale: 0.7;
-  rotate: 180deg;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
-  transform: rotateY(180deg);
+    width: 100%;
+    height: 1rem;
+    position: absolute;
+    scale: 0.7;
+    rotate: 180deg;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    transform: rotateY(180deg);
 }
 
 .darkShadow {
-  position: absolute;
-  left: 0;
-  height: 100px;
-  width: 100%;
-  background: linear-gradient(#12121200, #121212);
-  transition:
-    opacity 300ms,
-    top 300ms;
+    position: absolute;
+    left: 0;
+    height: 100px;
+    width: 100%;
+    background: linear-gradient(#12121200, #121212);
+    transition:
+        opacity 300ms,
+        top 300ms;
 }
 .show {
-  top: -100px;
-  opacity: 1;
+    top: -100px;
+    opacity: 1;
 }
 
 .hide {
-  top: 0px;
-  opacity: 0;
+    top: 0px;
+    opacity: 0;
+    z-index: -1;
+}
+
+@media only screen and (max-width: 768px) {
+    .individualGameDetailDescription {
+        font-size: 14px;
+    }
 }
