--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameSpecifications/Components/IndiGameSpecification/IndiGameSpecification.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameSpecifications/Components/IndiGameSpecification/IndiGameSpecification.module.css
@@ -1,21 +1,31 @@
 .topHeader {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .header {
-  font-weight: 400;
-  color: #aaa;
-  font-size: 16px;
+    font-weight: 400;
+    color: #aaa;
 }
 .row {
-  width: 100%;
-  display: flex;
-  margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    margin-bottom: 20px;
 }
 
 .row .column {
-  width: 50%;
+    width: 50%;
 }
+.column {
+    font-size: 1rem;
+    word-break: break-all;
+}
+
 .column:first-child {
-  padding-right: 20px;
+    padding-right: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    .column {
+        font-size: 14px;
+    }
 }
