--- a/src/Pages/MainContent/Pages/IndiGame/IndiGame/IndiGame.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/IndiGame/IndiGame.module.css
@@ -1,24 +1,27 @@
 .individualGame {
-  width: 100%;
-  padding: 20px 0px 0px;
+    width: 100%;
+    padding: 20px 0px 0px;
 }
 .reviewContainer {
-  width: calc(100% - 320px - 4rem);
+    width: calc(100% - 320px - 4rem);
 }
 
 @media only screen and (max-width: 1279px) {
-  .reviewContainer {
-    width: calc(100% - 260px - 1.5rem);
-  }
+    .individualGame {
+        padding: 10px;
+    }
+    .reviewContainer {
+        width: calc(100% - 260px - 1.5rem);
+    }
 }
 @media only screen and (max-width: 1023px) {
-  .reviewContainer {
-    width: calc(100% - 256px - 2rem);
-  }
+    .reviewContainer {
+        width: calc(100% - 256px - 2rem);
+    }
 }
 
 @media (max-width: 1279px) {
-  .reviewContainer {
-    width: 100%;
-  }
+    .reviewContainer {
+        width: 100%;
+    }
 }
