--- a/src/Shared/TextField/TextField.module.css
+++ b/src/Shared/TextField/TextField.module.css
@@ -1,84 +1,84 @@
 .textFieldMainContainer {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .container {
-	width: 100%;
-	position: relative;
-	background-color: rgba(255, 255, 255, 0.05);
-	backface-visibility: hidden;
-	border: 2px solid transparent;
-	border-radius: 4px;
-	font-size: 1rem;
-	display: flex;
-	flex-direction: column;
-	transition: border 0.2s ease;
-	overflow: hidden;
+    width: 100%;
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.05);
+    backface-visibility: hidden;
+    border: 2px solid transparent;
+    border-radius: 4px;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    transition: border 0.2s ease;
+    overflow: hidden;
 }
 .error {
-	border: 2px solid #cc2a24;
+    border: 2px solid #cc2a24;
 }
 #errorColor {
-	color: #cc2a24;
+    color: #cc2a24;
 }
 .label {
-	position: absolute;
-	pointer-events: none;
-	color: rgb(173, 173, 173);
-	user-select: none;
-	left: 10px;
-	top: 0;
-	translate: 0 20px;
-	transform-origin: 0 0;
-	transition:
-		scale 200ms cubic-bezier(0, 0, 0.2, 1),
-		translate 200ms cubic-bezier(0, 0, 0.2, 1),
-		color 200ms cubic-bezier(0, 0, 0.2, 1);
+    position: absolute;
+    pointer-events: none;
+    color: rgb(173, 173, 173);
+    user-select: none;
+    left: 10px;
+    top: 50%;
+    translate: 0 -50%;
+    transform-origin: 0 0;
+    transition:
+        scale 200ms cubic-bezier(0, 0, 0.2, 1),
+        translate 200ms cubic-bezier(0, 0, 0.2, 1),
+        top 200ms cubic-bezier(0, 0, 0.2, 1),
+        color 200ms cubic-bezier(0, 0, 0.2, 1);
 }
 
 .field {
-	width: 100%;
-	outline: none;
-	font-size: 1rem;
-	background: transparent;
-	padding: 25px 10px 15px 10px;
-	color: rgb(173, 173, 173);
-
-	border: none;
-	user-select: none;
+    width: 100%;
+    outline: none;
+    font-size: 1rem;
+    background: transparent;
+    padding: 25px 10px 15px 10px;
+    color: rgb(173, 173, 173);
+    border: none;
+    user-select: none;
 }
 
 .textFilled {
-	translate: 0 5px;
-	scale: 0.8;
-	color: rgb(173, 173, 173);
+    top: 0%;
+    translate: 0 5px;
+    scale: 0.8;
+    color: rgb(173, 173, 173);
 }
+
 .focused {
-	translate: 0 5px;
-	scale: 0.8;
-	color: rgb(2, 99, 224);
+    top: 0%;
+    translate: 0 5px;
+    scale: 0.8;
+    color: rgb(2, 99, 224);
 }
 
 .focusBorder {
-	border: 2px solid rgba(1, 81, 185, 0.733);
+    border: 2px solid rgba(1, 81, 185, 0.733);
 }
 
 .textarea {
-	resize: none;
-	min-height: 150px;
-	overflow: hidden;
+    resize: none;
+    min-height: 150px;
+    overflow: hidden;
 }
 @media screen and (max-width: 768px) {
-	.label {
-		font-size: 12px;
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-	}
-	.field {
-		font-size: 12px;
-	}
-	.focused {
-		scale: 0.8;
-	}
+    .label {
+        font-size: 12px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .field {
+        font-size: 12px;
+    }
 }
