--- a/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton/FileUploadButton.module.css
@@ -37,12 +37,10 @@
 .fileName {
     opacity: 0;
     font-size: medium;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    white-space: wrap;
     color: rgb(173, 173, 173);
     line-height: 20px;
-    width: calc(100% - 50px);
+    width: 100%;
 }
 #errorColor {
     color: #cc2a24;
@@ -66,6 +64,7 @@
         translate 200ms cubic-bezier(0, 0, 0.2, 1),
         top 200ms cubic-bezier(0, 0, 0.2, 1),
         color 200ms cubic-bezier(0, 0, 0.2, 1);
+    width: calc(100% - 45px);
 }
 
 #active {
@@ -86,6 +85,7 @@
 }
 
 .focused {
+    width: 100%;
     top: 0%;
     translate: 0 5px;
     scale: 0.8;
@@ -116,11 +116,7 @@
 @media screen and (max-width: 768px) {
     .label {
         font-size: 12px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
-        width: calc(100% - 50px);
+        white-space: wrap;
     }
     .field {
         font-size: 12px;
