--- a/src/Shared/FilterOption/FilterSwitch/FilterSwitch.module.css
+++ b/src/Shared/FilterOption/FilterSwitch/FilterSwitch.module.css
@@ -21,7 +21,12 @@
     position: absolute;
     left: 0;
     top: 50%;
+    transition: background-color 100ms;
 }
+.roundTransition {
+    transition: translate 100ms;
+}
+
 .activePathContainer {
     position: absolute;
     top: 50%;
@@ -41,6 +46,11 @@
     height: 100%;
     background-color: rgb(0, 60, 120);
 }
+.pathTransition {
+    transition:
+        background-color 100ms,
+        translate 100ms;
+}
 .round {
     width: 18px;
     height: 18px;
@@ -50,6 +60,10 @@
     translate: 0 -50%;
     border-radius: 50%;
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 0 1px 0px rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
+    transition: background-color 50ms;
     scale: 1.2;
+}
+.active {
+    background-color: rgb(8, 122, 236);
 }
