--- a/src/Shared/FileUploadButton/FileUploadButton.module.css
+++ b/src/Shared/FileUploadButton/FileUploadButton.module.css
@@ -37,7 +37,9 @@
 .fileName {
     opacity: 0;
     font-size: medium;
-    white-space: wrap;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: rgb(173, 173, 173);
     line-height: 20px;
     width: 100%;
@@ -51,6 +53,10 @@
 }
 
 .label {
+    width: calc(100% - 10px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     position: absolute;
     pointer-events: none;
     color: rgb(173, 173, 173);
@@ -60,10 +66,10 @@
     translate: 0 -50%;
     transform-origin: 0 0;
     transition:
-        scale 200ms cubic-bezier(0, 0, 0.2, 1),
-        translate 200ms cubic-bezier(0, 0, 0.2, 1),
-        top 200ms cubic-bezier(0, 0, 0.2, 1),
-        color 200ms cubic-bezier(0, 0, 0.2, 1);
+        scale 200ms cubic-bezier(0.4, 0, 0.2, 1),
+        translate 200ms cubic-bezier(0.4, 0, 0.2, 1),
+        top 200ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 200ms cubic-bezier(0.4, 0, 0.2, 1);
     width: calc(100% - 45px);
 }
 
@@ -86,8 +92,7 @@
 
 .focused {
     width: 100%;
-    top: 0%;
-    translate: 0 5px;
+    translate: 0 -30px;
     scale: 0.8;
 }
 
@@ -116,7 +121,6 @@
 @media screen and (max-width: 768px) {
     .label {
         font-size: 12px;
-        white-space: wrap;
     }
     .field {
         font-size: 12px;
