--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserContainer/UserContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserContainer/UserContainer.module.css
@@ -10,10 +10,12 @@
 	font-weight: 600;
 }
 
-@media only screen and (hover: none) {
-	.dots {
-		opacity: 1;
-	}
+.paginationContainer {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	margin-top: 3rem;
+	margin-bottom: 3rem;
 }
 
 @media only screen and (max-width: 1600px) and (min-width: 769px) {
