--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Components/UserCard/UserCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Components/UserCard/UserCard.module.css
@@ -5,14 +5,19 @@
 	align-items: center;
 	min-width: 100%;
 	height: 100%;
-	padding: 1rem;
-	border-radius: 10px;
+	border-radius: 4px;
 	background-color: #1f1f1f;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	position: relative;
 }
+.admin {
+	box-shadow: 0 0 5px #fbd600;
+}
 .cardContainerImg {
 	width: 100%;
+	background-color: #fbd50013;
+	border-radius: 4px 4px 0 0;
+	padding: 1rem;
 }
 .cardContainerImg img {
 	width: 100%;
@@ -22,7 +27,9 @@
 	margin-top: 1rem;
 	color: #fff;
 	text-align: center;
+	padding: 1rem;
 }
-.cardContainerInfo h4 {
+.cardContainerInfo h3 {
 	font-weight: 500;
+	margin-bottom: 0.5rem;
 }
