--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserCard/UserCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserCard/UserCard.module.css
@@ -5,6 +5,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
+	max-width: 400px;
 	padding: 2rem;
 	border-radius: 10px;
 	background-color: #1f1f1f;
@@ -17,10 +18,11 @@
 	width: 100%;
 	border-radius: 50%;
 }
-.cardContainerName {
+.cardContainerInfo {
 	margin-top: 1rem;
 	color: #fff;
+	text-align: center;
 }
-.cardContainerName h4 {
+.cardContainerInfo h4 {
 	font-weight: 500;
 }
