--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserCard/UserCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserCard/UserCard.module.css
@@ -10,6 +10,7 @@
 	border-radius: 10px;
 	background-color: #1f1f1f;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	position: relative;
 }
 .cardContainerImg {
 	width: 100%;
