(cardDots) reused and bug fixed

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGamesContainer/Components/AllGames/Components/AllGamesBody/AllGamesBody/AllGamesBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGamesContainer/Components/AllGames/Components/AllGamesBody/AllGamesBody/AllGamesBody.module.css
@@ -9,8 +9,12 @@
 	position: relative;
 }
 
+.list:hover .dots {
+	opacity: 1;
+}
+
 @media only screen and (hover: none) {
-	.cardDots {
+	.dots {
 		opacity: 1;
 	}
 }
