--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameShowReview/IndiGameShowReview/IndiGameShowReview.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameReviewSection/Components/IndiGameShowReview/IndiGameShowReview/IndiGameShowReview.module.css
@@ -1,5 +1,8 @@
 .paginationContainer {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
+	margin-top: 3rem;
+	display: flex;
+	justify-content: center;
+}
+.pageNumber {
+	font-size: 1rem;
 }
