--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserContainer/UserContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserContainer/UserContainer.module.css
@@ -13,6 +13,22 @@
 	font-weight: 600;
 }
 
+.imgContainer {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	margin-top: 1rem;
+	align-items: center;
+}
+
+.imgContainer img {
+	width: 100%;
+	max-width: 200px;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 50%;
+}
+
 @media only screen and (hover: none) {
 	.dots {
 		opacity: 1;
