--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/CardDot.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/CardDot.module.css
@@ -35,19 +35,20 @@
 .listContainer {
 	position: absolute;
 	list-style: none;
-	background-color: #18181c;
+	background-color: #252525;
 	padding: 5px 10px;
 	border-radius: 4px;
 	top: calc(100% + 5px);
 	left: 50%;
 	translate: -50%;
+	z-index: 1;
 }
 .listContainer li button {
 	width: 100%;
 	background-color: transparent;
 	border: none;
+	color: #ffffffaa;
 	font-size: 14px;
-	color: rgba(255, 255, 255, 0.726);
 	text-align: center;
 	text-wrap: nowrap;
 	margin: 5px 0;
@@ -62,12 +63,12 @@
 	display: block;
 	width: 100%;
 	height: 2px;
-	background-color: #2e2e33;
+	background-color: #333;
 	margin-top: 5px;
 	transition: background-color 200ms;
 }
 .listContainer li button:hover::after {
-	background-color: #4e4e57;
+	background-color: #444;
 }
 @media (hover: hover) and (pointer: fine) {
 	.listContainer li button {
