--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/CardDot.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/CardDot.module.css
@@ -1,14 +1,10 @@
-.list:hover .cardDots {
-	opacity: 1;
-}
 .cardDots {
 	position: absolute;
 	right: 0.5rem;
 	top: 0.5rem;
 	width: 2.5rem;
 	height: 2.5rem;
-	opacity: 0;
-	transition: opacity 300ms;
+	transition: opacity 200ms;
 }
 #show {
 	opacity: 1;
@@ -24,11 +20,12 @@
 	padding: 5px;
 	border: none;
 	cursor: pointer;
-	transition: background-color 200ms;
+	transition: scale 200ms;
 }
 .btnDot:hover {
 	background-color: rgba(0, 0, 0, 0.6);
 }
+
 .btnDot:active {
 	background-color: rgba(0, 0, 0, 0.4);
 }
@@ -41,6 +38,7 @@
 	top: calc(100% + 5px);
 	left: 50%;
 	translate: -50%;
+	animation: fadeZoomIn 200ms;
 	z-index: 1;
 }
 .listContainer li button {
@@ -70,6 +68,7 @@
 .listContainer li button:hover::after {
 	background-color: #444;
 }
+
 @media (hover: hover) and (pointer: fine) {
 	.listContainer li button {
 		cursor: pointer;
