--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/CardDot.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDot/CardDot.module.css
@@ -17,16 +17,15 @@
 	padding: 5px;
 	border: none;
 	cursor: pointer;
-	scale: 1;
-	opacity: 1;
-	animation: fadeIn 1000ms;
-	transition:
-		opacity 1000ms,
-		scale 1000ms;
-}
-.zoomOut {
 	opacity: 0;
 	scale: 0.5;
+	transition:
+		opacity 200ms,
+		scale 200ms;
+}
+.zoomIn {
+	opacity: 1;
+	scale: 1;
 }
 .btnDot:hover {
 	background-color: rgba(0, 0, 0, 0.6);
@@ -73,17 +72,6 @@
 }
 .listContainer li button:hover::after {
 	background-color: #444;
-}
-
-@keyframes fadeIn {
-	from {
-		scale: 0.5;
-		opacity: 0;
-	}
-	to {
-		scale: 1;
-		opacity: 1;
-	}
 }
 
 @media (hover: hover) and (pointer: fine) {
