--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
@@ -1,16 +1,16 @@
-.BrowseHeader {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.browseHeader {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
-.NumberOfGames {
-  font-size: 22px;
-  font-weight: 400;
+.numberOfGames {
+	font-size: 22px;
+	font-weight: 400;
 }
 
 @media only screen and (max-width: 768px) {
-  .NumberOfGames {
-    width: 100%;
-  }
+	.NumberOfGames {
+		width: 100%;
+	}
 }
