--- a/src/Pages/MainContent/Pages/Browse/Browse/Browse.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Browse/Browse.module.css
@@ -9,6 +9,7 @@
 @media only screen and (max-width: 1199px) and (min-width: 769px) {
 	.mainContent {
 		column-gap: 1rem;
+		margin-left: 1rem;
 	}
 }
 
