--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
@@ -9,8 +9,14 @@
 	font-weight: 400;
 }
 
+@media only screen and (max-width: 1199px) and (min-width: 769px) {
+	.browseHeader {
+		margin-left: 1rem;
+	}
+}
+
 @media only screen and (max-width: 768px) {
-	.NumberOfGames {
+	.numberOfGames {
 		width: 100%;
 	}
 }
