--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/BrowseHeader/BrowseHeader.module.css
@@ -12,6 +12,7 @@
 @media only screen and (max-width: 1199px) and (min-width: 769px) {
 	.browseHeader {
 		margin-left: 1rem;
+		width: calc(100% - 1rem);
 	}
 }
 
