--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserCard/UserCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserCard/UserCard.module.css
@@ -3,10 +3,9 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
+	min-width: 100%;
 	height: 100%;
-	max-width: 400px;
-	padding: 2rem;
+	padding: 1rem;
 	border-radius: 10px;
 	background-color: #1f1f1f;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
