--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserContainer/UserContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/UserContainer/UserContainer/UserContainer.module.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
+	grid-template-columns: repeat(6, 1fr);
 	gap: 1rem;
 }
 
@@ -29,5 +29,26 @@
 @media only screen and (hover: none) {
 	.dots {
 		opacity: 1;
+	}
+}
+
+@media only screen and (max-width: 1600px) and (min-width: 769px) {
+	.userContainer {
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+@media only screen and (max-width: 768px) and (min-width: 553px) {
+	.userContainer {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+@media only screen and (max-width: 552px) and (min-width: 250px) {
+	.userContainer {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+@media only screen and (max-width: 340px) {
+	.userContainer {
+		grid-template-columns: repeat(1, 1fr);
 	}
 }
