--- a/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDotList/CardDotList.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Shared/CardDotList/CardDotList.module.css
@@ -4,8 +4,6 @@
 	background-color: #252525;
 	padding: 5px 10px;
 	border-radius: 4px;
-	top: calc(100% + 5px);
-	left: 50%;
 	translate: -50%;
 	z-index: 1;
 	opacity: 0;
@@ -13,6 +11,20 @@
 	transition:
 		opacity 200ms,
 		scale 200ms;
+}
+
+.bottom {
+	top: calc(100% + 5px);
+	left: 50%;
+}
+
+.left {
+	top: 0;
+	right: -10px;
+}
+.top {
+	bottom: 100%;
+	left: 50%;
 }
 
 .zoomIn {
