--- a/src/Shared/VideoPlayer/Components/Controllers/Components/GearButton/GearButton/GearButton.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/GearButton/GearButton/GearButton.module.css
@@ -1,38 +1,42 @@
 .gearButton {
-  border: none;
-  background: none;
-  padding: 10px;
-  height: 100%;
-  cursor: pointer;
+	border: none;
+	background: none;
+	padding: 10px;
+	height: 100%;
+	cursor: pointer;
 }
 .gearButton > span {
-  width: 12px;
-  height: 12px;
-  display: block;
+	width: 12px;
+	height: 12px;
+	display: block;
 }
 .gearButton > span > svg {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 .menuContainer {
-  position: absolute;
-  font-size: 14px;
-  background-color: rgb(18, 18, 18);
-  padding: 10px;
-  border-radius: 4px;
-  top: -80px;
-  right: 10px;
+	position: absolute;
+	font-size: 14px;
+	background-color: rgb(18, 18, 18);
+	padding: 10px;
+	border-radius: 4px;
+	top: -80px;
+	right: 10px;
 }
 .menuContainer h5 {
-  font-size: 14px;
+	font-size: 14px;
 }
 .menu {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  cursor: pointer;
+	display: flex;
+	align-items: center;
+	padding: 10px;
+	cursor: pointer;
+	color: white;
+	background-color: rgb(18, 18, 18);
+	border: none;
+	text-align: left;
 }
 .switch {
-  width: 35px;
-  margin-left: 30px;
+	width: 35px;
+	margin-left: 30px;
 }
