--- a/src/Shared/VideoPlayer/Components/Controllers/Components/GearButton/GearButton/GearButton.module.css
+++ b/src/Shared/VideoPlayer/Components/Controllers/Components/GearButton/GearButton/GearButton.module.css
@@ -22,6 +22,7 @@
 	border-radius: 4px;
 	top: -80px;
 	right: 10px;
+	width: auto;
 }
 .menuContainer h5 {
 	font-size: 14px;
@@ -36,7 +37,13 @@
 	border: none;
 	text-align: left;
 }
-.switch {
-	width: 35px;
-	margin-left: 30px;
+.textContainer {
+	width: 100%;
+}
+.textContainer > p {
+	white-space: nowrap;
+}
+.toggleSwitchContainer {
+	min-width: 70px;
+	margin-left: 10px;
 }
