--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/DiscoverBannerItemCard/DiscoverBannerItemCard.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/DiscoverBannerItemCard/DiscoverBannerItemCard.module.css
@@ -44,49 +44,13 @@
 	height: 100%;
 	min-width: 100%;
 	position: relative;
+	z-index: 1;
 }
 
 .cards img {
 	border-radius: 5px;
 	width: 100%;
 	height: 100%;
-}
-
-.cardNameContainer {
-	position: absolute;
-	height: 100%;
-	top: 0;
-	left: 100%;
-	visibility: hidden;
-	overflow: hidden;
-	transition: visibility 0ms 300ms;
-}
-
-#first .cardNameContainer {
-	visibility: visible;
-	transition: visibility 0ms 0ms;
-}
-
-.cardName {
-	position: relative;
-	background-color: rgba(0, 0, 0, 0.507);
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	translate: -100% 0px;
-	transition: translate 200ms;
-	border-radius: 0 5px 5px 0;
-	font-size: 14px;
-}
-
-.cardNameText {
-	padding: 0 10px;
-}
-
-#first .cardName {
-	translate: 0px 0px;
-	transition: translate 300ms 800ms;
 }
 
 .cardContainer {
