--- a/src/Shared/ImagePreview/ImagePreview.module.css
+++ b/src/Shared/ImagePreview/ImagePreview.module.css
@@ -1,46 +1,26 @@
-.imagePreview {
-    width: 100%;
-    position: absolute;
-    background-color: #18181c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 4px;
-    z-index: 1;
-    animation-name: height-appear;
-    animation-duration: 150ms;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-    transform-origin: top center;
-    --height: 0px;
+.imagePreviewContainer {
+	position: absolute;
+	overflow: hidden;
+	z-index: 1;
+	max-height: calc(100vh - 70px);
+	width: 100%;
 }
-.hide {
-    animation-name: height-disappear;
+.imagePreview {
+	width: 100%;
+	height: 100%;
+	background-color: #18181c;
+	border-radius: 4px;
+	transform-origin: top center;
+	transition: translate 200ms;
+	translate: 0 -100%;
+}
+
+.imagePreview.show {
+	translate: 0 0%;
 }
 
 .img {
-    height: calc(var(--height));
-}
-@keyframes height-appear {
-    0% {
-        height: 0px;
-        opacity: 0.5;
-    }
-    100% {
-        height: calc(var(--height));
-        opacity: 1;
-    }
-}
-@keyframes height-disappear {
-    0% {
-        height: calc(var(--height));
-        opacity: 1;
-    }
-    100% {
-        height: 0px;
-        opacity: 0.5;
-    }
+	position: absolute;
+	height: 100px;
+	object-fit: contain; /* Ensures the image maintains its aspect ratio */
 }
