--- a/src/Shared/ImagePreview/ImagePreview.module.css
+++ b/src/Shared/ImagePreview/ImagePreview.module.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	overflow: hidden;
 	z-index: 1;
-	max-height: calc(100vh - 70px);
+	max-height: calc(100vh - 10rem);
 	width: 100%;
 }
 .imagePreview {
@@ -13,6 +13,8 @@
 	transform-origin: top center;
 	transition: translate 200ms;
 	translate: 0 -100%;
+	display: flex;
+	justify-content: center;
 }
 
 .imagePreview.show {
@@ -20,7 +22,8 @@
 }
 
 .img {
-	position: absolute;
-	height: 100px;
-	object-fit: contain; /* Ensures the image maintains its aspect ratio */
+	max-width: 100%;
+	height: 100%;
+	max-height: calc(100vh - 10rem);
+	object-fit: contain;
 }
