--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/Components/CoverVideoContainer/CoverVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/Components/CoverVideoContainer/CoverVideoContainer.module.css
@@ -1,10 +1,11 @@
 .field {
-    width: 100%;
-    outline: none;
-    font-size: 1rem;
-    background: transparent;
-    padding: 25px 10px 15px 10px;
-    color: rgb(173, 173, 173);
-    border: none;
-    user-select: none;
+	width: 100%;
+	outline: none;
+	font-size: 1rem;
+	line-height: 20px;
+	background: transparent;
+	padding: 25px 10px 15px 10px;
+	color: rgb(173, 173, 173);
+	border: none;
+	user-select: none;
 }
