--- a/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
+++ b/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
@@ -1,34 +1,35 @@
 .profile {
-    display: flex;
-    align-items: center;
-    padding-right: 1rem;
+	display: flex;
+	align-items: center;
+	padding-right: 1rem;
 }
 .profileImg {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
+	width: 30px;
+	height: 30px;
+	margin-right: 10px;
 }
 
 @media only screen and (max-width: 768px) {
-    .profile {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding-right: 0;
-        margin-bottom: 1rem;
-        width: 100%;
-    }
-    .profile p {
-        text-overflow: ellipsis;
-        width: 80%;
-        margin: 0;
-        text-align: center;
-        word-wrap: break-word;
-    }
-    .profileImg {
-        width: 30px;
-        height: 30px;
-        margin-right: 0;
-    }
+	.profile {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		padding-right: 0;
+		margin-bottom: 1rem;
+		width: 100%;
+	}
+	.profile p {
+		text-overflow: ellipsis;
+		width: 80%;
+		margin: 0;
+		text-align: center;
+		overflow-wrap: break-word;
+		hyphens: auto;
+	}
+	.profileImg {
+		width: 30px;
+		height: 30px;
+		margin-right: 0;
+	}
 }
