--- a/src/Shared/ToggleSwitch/ToggleSwitch.module.css
+++ b/src/Shared/ToggleSwitch/ToggleSwitch.module.css
@@ -63,3 +63,10 @@
 .active {
 	background-color: rgb(0, 0, 0);
 }
+.containerLoading {
+	pointer-events: none;
+	opacity: 0.1;
+}
+.activePathLoading,
+.roundLoading {
+}
