--- a/src/Shared/ToggleSwitch/ToggleSwitch.module.css
+++ b/src/Shared/ToggleSwitch/ToggleSwitch.module.css
@@ -52,10 +52,13 @@
 	width: 14px;
 	height: 14px;
 	position: absolute;
+	cursor: pointer;
 	left: 3px;
 	top: 0;
 	translate: 0 -50%;
 	border-radius: 50%;
+	border: none;
+	outline: none;
 	background-color: rgb(255, 255, 255);
 	box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
 	transition: background-color 300ms;
@@ -65,8 +68,8 @@
 }
 .containerLoading {
 	pointer-events: none;
-	opacity: 0.1;
+	opacity: 0.4;
 }
-.activePathLoading,
-.roundLoading {
+.activePathLoading {
+	background-color: rgba(228, 228, 228, 0.5);
 }
