--- a/src/Pages/Dashboard/Components/DashboardBody/Components/AllGamesContainer/Components/AllGames/Components/AllGamesBody/Components/AllGamesModalBodyEvents/AllGamesDeleteConfirmModal/AllGamesDeleteConfirmModal.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/AllGamesContainer/Components/AllGames/Components/AllGamesBody/Components/AllGamesModalBodyEvents/AllGamesDeleteConfirmModal/AllGamesDeleteConfirmModal.module.css
@@ -1,13 +1,14 @@
 .deleteBtn {
-  background-color: #cc2a24;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 100%;
-  margin: 1rem 0;
+	background-color: #cc2a24;
+	color: white;
+	border: none;
+	padding: 10px 20px;
+	text-align: center;
+	display: inline-block;
+	font-size: 16px;
+	cursor: pointer;
+	border-radius: 5px;
+	width: 100%;
+	margin: 1rem 0;
+	position: relative;
 }
