--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/Components/TagsContainer/TagOrCategoryDeleteBody/TagOrCategoryDeleteBody.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/Components/TagsContainer/TagOrCategoryDeleteBody/TagOrCategoryDeleteBody.module.css
@@ -13,6 +13,7 @@
 }
 
 .deleteBtn {
+	width: 100%;
 	background-color: #cc2a24;
 	color: white;
 	border: none;
@@ -22,17 +23,5 @@
 	cursor: pointer;
 	position: relative;
 	margin-left: auto;
-	display: inline-block;
-}
-.cancelBtn {
-	background-color: #14a027;
-	color: white;
-	border: none;
-	font-size: 1rem;
-	border-radius: 0.2rem;
-	padding: 0.5rem 1rem;
-	cursor: pointer;
-	position: relative;
-
 	display: inline-block;
 }
