--- a/src/Shared/Card/Card.module.css
+++ b/src/Shared/Card/Card.module.css
@@ -10,8 +10,7 @@
 .name {
 	font-weight: 500;
 	font-size: 16px;
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+	margin: 10px 0 5px 0;
 	flex-grow: 1;
 }
 
