--- a/src/Shared/Toast/Toast/Toast.module.css
+++ b/src/Shared/Toast/Toast/Toast.module.css
@@ -8,4 +8,7 @@
 	background-color: #333;
 	color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	animation:
+		slideIn 0.5s,
+		slideOut 0.5s 2.5s forwards;
 }
