--- a/src/Shared/Toasts/Toasts/Toasts.module.css
+++ b/src/Shared/Toasts/Toasts/Toasts.module.css
@@ -2,4 +2,9 @@
 	position: fixed;
 	right: 1rem;
 	bottom: 1rem;
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	z-index: 2;
 }
