--- a/src/Shared/ProfilePhotoUploader/ProfilePhotoUploader.module.css
+++ b/src/Shared/ProfilePhotoUploader/ProfilePhotoUploader.module.css
@@ -8,7 +8,8 @@
 	max-height: 20rem;
 	aspect-ratio: 1/1;
 	border-radius: 4px;
-	background-color: #f5f5f5;
+	background-color: transparent;
+	border: none;
 	cursor: pointer;
 	position: relative;
 	overflow: hidden;
