--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/AdminContainer/AdminContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/AdminContainer/AdminContainer.module.css
@@ -14,6 +14,17 @@
 	margin-bottom: 3rem;
 }
 
+.IconContainer {
+	display: flex;
+	align-items: center;
+}
+
+.reportIcon {
+	width: 1rem;
+	height: 1rem;
+	margin-right: 0.5rem;
+}
+
 @media only screen and (max-width: 1600px) and (min-width: 769px) {
 	.adminContainer {
 		grid-template-columns: repeat(4, 1fr);
