--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItem/DiscoverBannerItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItem/DiscoverBannerItem.module.css
@@ -1,114 +1,121 @@
 .carouselItem {
-  width: 75vw;
-  max-width: 1600px;
-  position: absolute;
-  visibility: hidden;
-  border-radius: 5px;
+	width: 75vw;
+	max-width: 1600px;
+	position: absolute;
+	visibility: hidden;
+	border-radius: 5px;
 }
 
 .itemHide {
-  z-index: 0;
-  opacity: 0;
-  visibility: hidden;
+	z-index: 0;
+	opacity: 0;
+	visibility: hidden;
 }
 
 .carouselImg {
-  width: 100%;
-  aspect-ratio: 1.77777778/1;
-  border-radius: 5px;
+	width: 100%;
+	aspect-ratio: 1.77777778/1;
+	border-radius: 5px;
 }
 
 .itemButton {
-  position: absolute;
-  bottom: 30%;
-  left: 2%;
-}
-
-.itemButton button:hover {
-  cursor: pointer;
+	position: absolute;
+	bottom: 30%;
+	left: 2%;
 }
 
 .itemButton button {
-  border: none;
-  font-size: 1vw;
-  padding: 15% 15%;
-  width: 8vw;
-  max-width: 10rem;
-  text-transform: uppercase;
-  border-radius: 5px;
+	border: none;
+	font-size: 1vw;
+	padding: 15% 15%;
+	width: 8vw;
+	max-width: 10rem;
+	text-transform: uppercase;
+	border-radius: 5px;
+	position: relative;
+	background-color: rgb(255, 255, 255);
+	border: 1px solid transparent;
+	color: rgb(30, 30, 30);
+	transition: 200ms cubic-bezier(0.17, 0.17, 0.23, 1);
+}
+.itemButton:hover button {
+	cursor: pointer;
+	background-color: rgba(255, 255, 255, 0);
+	color: white;
+	border: 1px solid rgb(255, 255, 255);
 }
 
 #initialBanner {
-  opacity: 1;
-  z-index: 1;
-  visibility: visible;
+	opacity: 1;
+	z-index: 1;
+	visibility: visible;
 }
 
 #bannerFadeIn {
-  opacity: 0;
-  z-index: 1;
-  visibility: visible;
-  animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards running fadeIn;
+	opacity: 0;
+	z-index: 1;
+	visibility: visible;
+	animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards running fadeIn;
 }
 
 #bannerFadeOut {
-  opacity: 0;
-  visibility: hidden;
-  animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
+	opacity: 0;
+	visibility: hidden;
+	animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
 }
 
 @keyframes fadeout {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-    visibility: visible;
-  }
+	0% {
+		transform: translateX(0);
+		opacity: 1;
+		visibility: visible;
+	}
 
-  25% {
-    opacity: 1;
-    visibility: visible;
-  }
+	25% {
+		opacity: 1;
+		visibility: visible;
+	}
 
-  100% {
-    transform: translateX(-100px);
-    opacity: 0;
-    visibility: hidden;
-  }
+	100% {
+		transform: translateX(-100px);
+		opacity: 0;
+		visibility: hidden;
+	}
 }
 
 @keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateX(100px);
-  }
+	0% {
+		opacity: 0;
+		transform: translateX(100px);
+	}
 
-  75% {
-    opacity: 1;
-    visibility: visible;
-  }
+	75% {
+		opacity: 1;
+		visibility: visible;
+	}
 
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-    visibility: visible;
-  }
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+		visibility: visible;
+	}
 }
 
 @media only screen and (min-width: 2134px) {
-  .itemButton button {
-    font-size: 1rem;
-  }
+	.itemButton button {
+		font-size: 1rem;
+	}
 }
 
 @media only screen and (max-width: 1023px) and (min-width: 766px) {
-  .carouselItem {
-    width: 100%;
-    aspect-ratio: 1.77777778/1;
-  }
+	.carouselItem {
+		width: 100%;
+		aspect-ratio: 1.77777778/1;
+	}
 
-  .carouselImg {
-    width: 100%;
-    aspect-ratio: 1.77777778/1;
-    border-radius: 5px;
-  }
+	.carouselImg {
+		width: 100%;
+		aspect-ratio: 1.77777778/1;
+		border-radius: 5px;
+	}
 }
