--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/Components/DiscoverBannerItemCardShadow/DiscoverBannerItemCardShadow.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCard/Components/DiscoverBannerItemCardShadow/DiscoverBannerItemCardShadow.module.css
@@ -8,7 +8,7 @@
 }
 
 .shadow {
-	background-color: rgb(22, 22, 22);
+	background-color: rgba(0, 0, 0, 0.5);
 	width: 100%;
 	height: 100%;
 	translate: 0 calc(-100% + 0.5px);
