--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@ body {
 	inset: 0px;
 	background: black;
 }
-.margin-right-8px {
-	margin-right: 8px;
+.margin-right-6px {
+	margin-right: 6px;
 }
 
 .overflow-y-hidden {
@@ -56,27 +56,27 @@ body {
 	.hover-shadow:hover {
 		filter: drop-shadow(0px 0px 5px rgba(141, 141, 141, 0.616)) brightness(1.1);
 	}
+
+	.scroll-style::-webkit-scrollbar,
 	html::-webkit-scrollbar {
-		position: absolute;
-		width: 8px;
+		width: 6px;
 	}
 
+	.scroll-style::-webkit-scrollbar-track,
 	html::-webkit-scrollbar-track {
-		background: #121212;
+		background: transparent;
 	}
 
+	.scroll-style::-webkit-scrollbar-thumb,
 	html::-webkit-scrollbar-thumb {
-		background: #474747;
-		border-radius: 5px;
-		opacity: 0;
+		background-color: #474747;
 	}
-
+	.scroll-style::-webkit-scrollbar-thumb:hover,
 	html::-webkit-scrollbar-thumb:hover {
-		background: rgb(82, 82, 82);
-		opacity: 0;
+		background-color: #5a5959;
 	}
-
+	.scroll-style::-webkit-scrollbar-thumb:active,
 	html::-webkit-scrollbar-thumb:active {
-		background: rgb(114, 114, 114);
+		background-color: #363636;
 	}
 }
