--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditBanner/EditBanner.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditBanner/EditBanner.module.css
@@ -1,3 +1,13 @@
 .editBanner {
 	width: 100%;
 }
+.editBannerHeader {
+	font-size: 1.5rem;
+	font-weight: 400;
+}
+.marginTop {
+	margin-top: 1rem;
+}
+.subHeader {
+	font-weight: 400;
+}
