--- a/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/GameInfoField/Components/GameInfoFieldBanner/CoverImageVideoContainer/CoverImageVideoContainer/CoverImageVideoContainer.module.css
@@ -10,6 +10,29 @@
 		opacity 200ms;
 	color: rgb(173, 173, 173);
 }
+
+.loading {
+	background-color: transparent;
+	background-image: linear-gradient(
+		90deg,
+		rgba(255, 255, 255, 0.05) 0%,
+		rgba(255, 255, 255, 0.06) 25%,
+		rgba(255, 255, 255, 0.1) 50%,
+		rgba(255, 255, 255, 0.06) 75%,
+		rgba(255, 255, 255, 0.05) 100%
+	);
+	background-size: 500% 100%;
+	background-position: 0 0;
+	animation: shimmer 6000ms linear infinite forwards 250ms;
+}
+@keyframes shimmer {
+	0% {
+		background-position: -500% 0;
+	}
+	100% {
+		background-position: 500% 0;
+	}
+}
 .disabled {
 	opacity: 0.5;
 }
